--- a/.gitlab/gitlab-ci.yml
+++ b/.gitlab/gitlab-ci.yml
@@ -7,8 +7,8 @@
 # We initialize the nonfree repo, then spawn a sub-pipeline from it
 
 variables:
-  VSIM_TESTS: '["testCluster", "testClusterOffload"]'
-    
+  VSIM_TESTS: '["testCluster", "testClusterOffload", "testMemBypass"]'
+
 stages:
   - nonfree
 
@@ -25,7 +25,7 @@ process:
       - envsubst '${VSIM_TESTS}' < nonfree/ci.yml > nonfree/processed_ci.yml
     artifacts:
       paths: [ nonfree/processed_ci.yml ]
-    
+
 subpipe:
   stage: nonfree
   needs: [ process ]
