--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,7 +26,9 @@ jobs:
           SPDX-License-Identifier: (SHL-0.51|Apache-2.0)
         exclude_paths: |
           utils/*
-        # sw/include/regs/*.h
+          sw/include/regs/*
+          scripts/run_clang_format.py
+
 
   lint-sv:
     runs-on: ubuntu-latest
