--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,7 +26,9 @@ jobs:
           SPDX-License-Identifier: (SHL-0.51|Apache-2.0)
         exclude_paths: |
           utils/*
-        # sw/include/regs/*.h
+          sw/include/regs/*
+          scripts/run_clang_format.py
+
 
   lint-sv:
     runs-on: ubuntu-latest
@@ -55,7 +57,7 @@ jobs:
       uses: DoozyX/clang-format-lint-action@v0.14
       with:
         extensions: 'c,h,cpp'
-        clangFormatVersion: 14
+        clangFormatVersion: 12
         style: >
           {
           IndentWidth: 4,
