--- a/Bender.yml
+++ b/Bender.yml
@@ -10,9 +10,13 @@ package:
 dependencies:
   register_interface:       { git: "https://github.com/pulp-platform/register_interface.git", version: 0.4.3  }
   axi:                      { git: "https://github.com/pulp-platform/axi.git",                version: 0.39.2 }
-  cheshire:                 { git: "https://github.com/pulp-platform/cheshire.git",           rev: d58214e5c6a3e8f8609989005e3f1d663109bd7f}
+  cheshire:                 { git: "https://github.com/pulp-platform/cheshire.git",           rev: c6fe2458cc49770696f2d58285b050d94d9c9f04}
   snitch_cluster:           { git: "https://github.com/pulp-platform/snitch_cluster.git",     rev: c12ce9b2af1ac8edf3d4feb18939e1ad20c42225}
   common_cells:             { git: "https://github.com/pulp-platform/common_cells.git",       version: 1.31.1}
+
+workspace:
+  package_links:
+    cheshire: cheshire
 
 sources:
   - hw/chimera_pkg.sv
