HW: Add support for 32 bit SoC config

--- a/Bender.yml
+++ b/Bender.yml
@@ -13,16 +13,19 @@ dependencies:
   cheshire:                 { git: "https://github.com/pulp-platform/cheshire.git",           rev: 4dfba37385eae48c44080defdfaa3f580921a60c}
   snitch_cluster:           { git: "https://github.com/pulp-platform/snitch_cluster.git",     rev: c12ce9b2af1ac8edf3d4feb18939e1ad20c42225}
   common_cells:             { git: "https://github.com/pulp-platform/common_cells.git",       version: 1.31.1}
+  idma:                     { git: "https://github.com/pulp-platform/iDMA.git",               rev: 9edf489f57389dce5e71252c79e337f527d3aded}
 
 workspace:
   package_links:
     cheshire: cheshire
+    idma: idma
 
 sources:
   - hw/chimera_pkg.sv
   - hw/regs/chimera_reg_pkg.sv
   - hw/regs/chimera_reg_top.sv
   - hw/bootrom/snitch/snitch_bootrom.sv
+  - hw/narrow_adapter.sv
   - hw/chimera_cluster_adapter.sv
   - hw/chimera_top_wrapper.sv
 
