--- a/Bender.yml
+++ b/Bender.yml
@@ -27,6 +27,8 @@ sources:
   - hw/bootrom/snitch/snitch_bootrom.sv
   - hw/narrow_adapter.sv
   - hw/chimera_cluster_adapter.sv
+  - hw/chimera_cluster.sv
+  - hw/chimera_clu_domain.sv
   - hw/chimera_top_wrapper.sv
 
   - target: any(simulation, test)
