--- a/Bender.yml
+++ b/Bender.yml
@@ -14,6 +14,7 @@ dependencies:
   snitch_cluster:           { git: "https://github.com/pulp-platform/snitch_cluster.git",     rev: c12ce9b2af1ac8edf3d4feb18939e1ad20c42225}
   common_cells:             { git: "https://github.com/pulp-platform/common_cells.git",       version: 1.31.1}
   idma:                     { git: "https://github.com/pulp-platform/iDMA.git",               rev: 9edf489f57389dce5e71252c79e337f527d3aded}
+  apb:                      { git: "https://github.com/pulp-platform/apb.git",                version: 0.2.4          }
 
 workspace:
   package_links:
