Sim, Makefile: Integrate HyperRAM VIP in Chimera tb

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ transcript
 .venv
 cheshire
 idma
+hyperbus
 
 # EMACS
 
@@ -30,6 +31,7 @@ utils/verible-verilog
 
 # SIM
 
+target/sim/models
 target/sim/vsim/work
 target/sim/vsim/transcript
 target/sim/vsim/trace*
