--- a/Bender.yml
+++ b/Bender.yml
@@ -18,6 +18,7 @@ dependencies:
   memory_island:            { git: "https://github.com/pulp-platform/memory_island.git",          rev: 64828cb7a9ccc1f1656ec92d06129072f445c319 } # main branch
   apb:                      { git: "https://github.com/pulp-platform/apb.git",                version: 0.2.4          }
   hyperbus:                 { git: "https://github.com/pulp-platform/hyperbus.git",           rev: f039e601c8b6590181734e6d26ff8b77aa380412 } # branch: chi/add_fsm_with_Tcsh
+  tech_cells_generic:       { git: "https://github.com/pulp-platform/tech_cells_generic.git", version: 0.2.12 }
 
 export_include_dirs:
   - hw/include
@@ -26,6 +27,7 @@ workspace:
   package_links:
     cheshire: cheshire
     idma: idma
+    hyperbus: hyperbus
 
 sources:
   - hw/chimera_pkg.sv
@@ -42,10 +44,11 @@ sources:
 
   - target: any(simulation, test)
     files:
+      - target/sim/models/s27ks0641/s27ks0641.v
+      - target/sim/src/tb_chimera_pkg.sv
       - target/sim/src/vip_chimera_soc.sv
       - target/sim/src/fixture_chimera_soc.sv
       - target/sim/src/tb_chimera_soc.sv
-      - target/sim/src/tb_chimera_pkg.sv
 
 vendor_package:
   - name: reggen
