Hw: Integrate HyperBus peripheral in Chimera top

--- a/Bender.yml
+++ b/Bender.yml
@@ -17,6 +17,7 @@ dependencies:
   idma:                     { git: "https://github.com/pulp-platform/iDMA.git",               rev: 9edf489f57389dce5e71252c79e337f527d3aded}
   memory_island:            { git: "https://github.com/pulp-platform/memory_island.git",          rev: 64828cb7a9ccc1f1656ec92d06129072f445c319 } # main branch
   apb:                      { git: "https://github.com/pulp-platform/apb.git",                version: 0.2.4          }
+  hyperbus:                 { git: "https://github.com/pulp-platform/hyperbus.git",           rev: f039e601c8b6590181734e6d26ff8b77aa380412 } # branch: chi/add_fsm_with_Tcsh
 
 export_include_dirs:
   - hw/include
@@ -36,6 +37,7 @@ sources:
   - hw/chimera_cluster.sv
   - hw/chimera_clu_domain.sv
   - hw/chimera_memisland_domain.sv
+  - hw/hyperbus_wrap.sv
   - hw/chimera_top_wrapper.sv
 
   - target: any(simulation, test)
