--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ idma
 # HW
 
 hw/regs/pcr.md
+cheshire
 
 # SW
 
@@ -32,6 +33,7 @@ utils/verible-verilog
 
 target/sim/vsim/work
 target/sim/vsim/transcript
+target/sim/vsim/*.do
 target/sim/vsim/trace*
 modelsim.ini
 compile.tcl
