makefile: Integrate PULP Cluster build flow

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ utils/verible-verilog
 target/sim/models
 target/sim/vsim/work
 target/sim/vsim/transcript
-target/sim/vsim/*.do
+target/sim/vsim/*.log
 target/sim/vsim/trace*
 modelsim.ini
 compile.tcl
