[WIP] bender,makefile: Add PULP Cluster dep and update dependencies - add pulp_cluster dependency to Bender.yml manifest - update resolved dependencies in Bender.lock - fix issues with some dependencies with overrides in Bender.local - fix Snitch cluster's icache version due to outdated datatypes

--- a/Bender.yml
+++ b/Bender.yml
@@ -7,18 +7,20 @@ package:
   authors:
     - "Moritz Scherer <scheremo@iis.ee.ethz.ch>"
     - "Lorenzo Leone <lleone@iis.ee.ethz.ch>"
+    - "Sergio Mazzola <smazzola@iis.ee.ethz.ch>"
 
 dependencies:
   register_interface:       { git: "https://github.com/pulp-platform/register_interface.git", version: 0.4.3  }
   axi:                      { git: "https://github.com/pulp-platform/axi.git",                version: 0.39.2 }
   cheshire:                 { git: "https://github.com/pulp-platform/cheshire.git",           rev: 586cb0225be5c57f5ffcf67bd490763efd9b4d24}
-  snitch_cluster:           { git: "https://github.com/pulp-platform/snitch_cluster.git",     rev: c12ce9b2af1ac8edf3d4feb18939e1ad20c42225}
+  snitch_cluster:           { git: "https://github.com/pulp-platform/snitch_cluster.git",     rev: bad609605fd1bff5c982b47d5886d06b29b38a72} # branch: smazzola/chimera
   common_cells:             { git: "https://github.com/pulp-platform/common_cells.git",       version: 1.31.1}
   idma:                     { git: "https://github.com/pulp-platform/iDMA.git",               rev: 9edf489f57389dce5e71252c79e337f527d3aded}
-  memory_island:            { git: "https://github.com/pulp-platform/memory_island.git",          rev: 64828cb7a9ccc1f1656ec92d06129072f445c319 } # main branch
+  memory_island:            { git: "https://github.com/pulp-platform/memory_island.git",      rev: 64828cb7a9ccc1f1656ec92d06129072f445c319 } # main branch
   apb:                      { git: "https://github.com/pulp-platform/apb.git",                version: 0.2.4          }
   hyperbus:                 { git: "https://github.com/pulp-platform/hyperbus.git",           rev: f039e601c8b6590181734e6d26ff8b77aa380412 } # branch: chi/add_fsm_with_Tcsh
   tech_cells_generic:       { git: "https://github.com/pulp-platform/tech_cells_generic.git", version: 0.2.12 }
+  pulp_cluster:             { git: "https://github.com/pulp-platform/pulp_cluster.git",       rev: d16ac0afcb4081eb5379c74e397f0cc9d2b88e5e } # branch: smazzola/chimera
 
 export_include_dirs:
   - hw/include
