--- a/Bender.yml
+++ b/Bender.yml
@@ -29,16 +29,23 @@ workspace:
     idma: idma
 
 sources:
+  # Level 0
   - hw/chimera_pkg.sv
   - hw/regs/chimera_reg_pkg.sv
   - hw/regs/chimera_reg_top.sv
   - hw/bootrom/snitch/snitch_bootrom.sv
   - hw/narrow_adapter.sv
   - hw/chimera_cluster_adapter.sv
-  - hw/chimera_cluster.sv
+
+  # List of clusters
+  - hw/clusters/chimera_cluster.sv
+
+  # Top Level Domains
   - hw/chimera_clu_domain.sv
   - hw/chimera_memisland_domain.sv
   - hw/hyperbus_wrap.sv
+
+  # Top Level
   - hw/chimera_top_wrapper.sv
 
   - target: any(simulation, test)
