--- a/.github/workflows/gitlab-ci.yml
+++ b/.github/workflows/gitlab-ci.yml
@@ -6,16 +6,16 @@
 
 name: gitlab-ci
 
-on:
-  [ push, workflow_dispatch ]
+# on:
+#   [ push, workflow_dispatch ]
 
-#on:
-#  push:
-#    branches:
-#      - main
-#      - devel
-#  pull_request:
-#  workflow_dispatch:
+on:
+ push:
+   branches:
+     - main
+     - devel
+ pull_request:
+ workflow_dispatch:
 
 jobs:
   gitlab-ci:
